# JupyterCAD

./: .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  app.webpack.config.js  build_opencascade.js  extension.webpack.config.js  install.json  lerna.json  package-lock.json  package.json  pyproject.toml  requirements-build.txt  schema.js  setup.cfg  setup.py  tsconfig.eslint.json  tsconfig.json  tsconfig.worker.json  tsconfigbase.json  worker.webpack.config.js
.github/workflows/: build.yml  check-release.yml  comment-on-pr.yml  deploy.yml  enforce-labels.yml  prep-release.yml  publish-release.yml  update_galata_references.yaml  update_lite_galata_references.yaml
.nblink/: environment.yml  nblink-lock.json
app-style/: base.css  index.css
binder/: Dockerfile  env.yaml  environment.yml  jupyter_config.json  jupyter_notebook_config.py  postBuild  start
docker/: Dockerfile  env.yaml
docs/: doc-requirements.txt  environment.yml
docs/source/: app.rst  collab.rst  conf.py  contributing.rst  extension.rst  index.rst  install.rst  python_api.rst
examples/: 3M_CONNECTOR.STEP  ArchDetail.FCStd  ArchDetail.jcad  Gear.jcad  Notebook.ipynb  Sklop.STEP  Untitled.ipynb  api.ipynb  box2.FCStd  box3.FCStd  box4.FCStd  common.FCStd  cut.FCStd  demo-Part.step  demo.ipynb  example1.FCStd  example4.FCStd  example5.FCStd  example6.FCStd  example_2D.FCStd  jcad.ipynb  mesh.jcad  occ.ipynb  pad.jcad  pawn.jcad  porch.jcad  screwdriver.jcad  test-Copy1.jcad  test-exploded.jcad  test.jcad  test22.jcad  turbo-rotor-nb1.stp
examples/v/: test.jcad
jupytercad/: __init__.py  _version.py  app.py  fcstd_ydoc.py  jcad_ydoc.py
jupytercad-opencascade/: build.yml  build_opencascade.js  package.json
jupytercad/cadapp/: __init__.py  cadapp.py  utils.py
jupytercad/document/: __init__.py  document.py
jupytercad/freecad/: loader.py  tools.py
lite/: build-environment.yml  environment.yml  jupyter-lite.json  jupyter_lite_config.json
python/jupytercad/: README.md  pyproject.toml
python/jupytercad-app/: .gitignore  LICENSE  README.md  install.json  package.json  pyproject.toml  webpack.config.js
python/jupytercad-app/jupyter-config/server-config/: jupytercad_app.json
python/jupytercad-app/jupytercad_app/: __init__.py  cadapp.py
python/jupytercad-app/scripts/: bump-version.py
python/jupytercad-app/src/: sharedscope.ts
python/jupytercad-app/src/app/: app.ts
python/jupytercad-app/src/app/plugins/mainmenu/: menuWidget.ts  titleWidget.tsx  userWidget.tsx
python/jupytercad-app/style/: base.css
python/jupytercad-core/: .gitignore  extension.webpack.config.js  install.json  package.json  pyproject.toml  tsconfig.json
python/jupytercad-core/jupyter-config/server-config/: jupytercad_core.json
python/jupytercad-core/jupytercad_core/: __init__.py  handlers.py  jcad_ydoc.py
python/jupytercad-core/src/: factory.ts  handler.ts  index.ts  plugin.ts  workerregistry.ts
python/jupytercad-core/src/jcadplugin/: modelfactory.ts  plugins.ts
python/jupytercad-lab/: .gitignore  README.md  package.json  pyproject.toml
python/jupytercad-lab/jupyter-config/server-config/: jupytercad_lab.json
python/jupytercad-lab/jupytercad_lab/: __init__.py  handlers.py
python/jupytercad-lab/jupytercad_lab/notebook/: __init__.py  cad_document.py
python/jupytercad-lab/src/: handler.ts  index.ts  notebookrenderer.ts
python/jupytercad-lab/src/jcadplugin/: modelfactory.ts  plugins.ts
python/jupytercad/jupytercad/: __init__.py
python/jupytercad/scripts/: bump-version.py
python/jupytercad_app/: .gitignore  .prettierignore  RELEASE.md  package.json  pyproject.toml  webpack.config.js
python/jupytercad_app/jupytercad_app/: cadapp.py  utils.py
python/jupytercad_app/jupytercad_app/templates/: index.html
python/jupytercad_app/src/: main.ts  sharedscope.ts
python/jupytercad_app/src/app/: app.ts  shell.ts
python/jupytercad_app/src/app/plugins/browser/: index.ts
python/jupytercad_app/src/app/plugins/launcher/: index.ts
python/jupytercad_app/src/app/plugins/mainmenu/: menuWidget.ts
python/jupytercad_app/src/app/plugins/paths/: index.ts
python/jupytercad_core/: .gitignore  LICENSE  README.md  package.json  pyproject.toml
python/jupytercad_core/jupytercad_core/: __init__.py  constants.py  handlers.py  jcad_ydoc.py  step_ydoc.py  stl_ydoc.py
python/jupytercad_core/jupytercad_core/schema/: __init__.py
python/jupytercad_core/schema/: jupytercad-settings.json
python/jupytercad_core/scripts/: bump-version.py
python/jupytercad_core/src/: externalcommand.ts  factory.ts  index.ts  plugin.ts  schemaregistry.ts  workerregistry.ts
python/jupytercad_core/src/jcadplugin/: modelfactory.ts  plugins.ts
python/jupytercad_core/src/stepplugin/: model.ts  modelfactory.ts  plugins.ts
python/jupytercad_core/src/stlplugin/: commands.ts  model.ts  modelfactory.ts  plugins.ts  worker.ts
python/jupytercad_core/style/: base.css
python/jupytercad_lab/: .prettierignore  install.json  package.json  pyproject.toml  tsconfig.json
python/jupytercad_lab/jupytercad_lab/: __init__.py
python/jupytercad_lab/jupytercad_lab/notebook/: cad_document.py  utils.py  y_connector.py
python/jupytercad_lab/jupytercad_lab/notebook/objects/: __init__.py
python/jupytercad_lab/jupytercad_lab/notebook/tests/: test_api.py
python/jupytercad_lab/jupytercad_lab/tests/: test_cad_document.py
python/jupytercad_lab/src/: index.ts  notebookrenderer.ts
python/jupytercad_lab/style/: base.css
python/jupytercad_lite/: LICENSE  README.md  pyproject.toml
python/jupytercad_lite/jupytercad/: __init__.py
python/jupytercad_lite/scripts/: bump-version.py
scripts/: build_packages.py  bump-version.py  dev-install.py
src/: app.ts  bootstrap.ts  factory.ts  index.ts  mainview.tsx  model.ts  objectmodel.ts  svg.d.ts  token.ts  tools.ts  types.ts  widget.ts  widget.tsx  worker.ts
style/: base.css
ui-tests/: jupyter_server_test_config.py  package.json  playwright-lite.config.js  playwright.config.js
(+137 files in other folders)
