[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0,<2"]

[project]
name = "jupytercad-root"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]


[tool.hatch.version]
path = "python/jupytercad/jupytercad/__init__.py"

[tool.jupyter-releaser.options]
version-cmd = "python scripts/bump-version.py"
python_packages = [
    "python/jupytercad:jupytercad",
    "python/jupytercad-app:jupytercad-app",
    "python/jupytercad-core:jupytercad-core",
    "python/jupytercad-lab:jupytercad-lab",
]

[tool.jupyter-releaser.hooks]
before-bump-version = ["python -m pip install hatch 'jupyterlab>=4.0.0'"]
before-build-npm = [
    "python -m pip install datamodel-code-generator jupyterlab --pre -U",
    "jlpm",
    "jlpm build:prod",
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
