[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0,<2"]

[project]
name = "jupytercad-root"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]


[tool.hatch.version]
path = "python/jupytercad/jupytercad/__init__.py"

[tool.jupyter-releaser]
skip = [ "check-python" ]


[tool.jupyter-releaser.options]
version-cmd = "python scripts/bump-version.py"
python_packages = [
    "python/jupytercad:jupytercad",
    "python/jupytercad_app:jupytercad_app",
    "python/jupytercad_core:jupytercad_core",
    "python/jupytercad_lab:jupytercad_lab",
    "python/jupytercad_lite:jupytercad_lite",
]

[tool.jupyter-releaser.hooks]
before-bump-version = ["python -m pip install hatch build 'jupyterlab>=4.0.0'"]
before-build-npm = [
    "python -m pip install datamodel-code-generator",
    "jlpm",
    "jlpm build:prod",
]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.ruff]
extend-exclude = [
    "*.ipynb",
]
