[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0,<2"]

[project]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jupytercad-core>=0.3.3,<0.4",
  "jupytercad-lab>=0.3.3,<0.4",
  "jupytercad-app>=0.3.3,<0.4",
]
dynamic = ["version"]
license = {file = "LICENSE"}
name = "jupytercad"
readme = "README.md"
requires-python = ">=3.8"


[tool.hatch.version]
path = "jupytercad/__init__.py"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.check-wheel-contents]
ignore = ["W002"]
