[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]

[project]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jupyter_server>=2.0.6,<3",
  "jupyter_ydoc>=2,<3",
  "jupyter-collaboration>=2.1.0,<3",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]
license = {file = "LICENSE"}
name = "jupytercad_core"
readme = "README.md"
requires-python = ">=3.8"

[project.entry-points.jupyter_ydoc]
jcad = "jupytercad_core.jcad_ydoc:YJCad"
step = "jupytercad_core.step_ydoc:YSTEP"
stl = "jupytercad_core.stl_ydoc:YSTL"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupytercad_core/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"install.json" = "share/jupyter/labextensions/@jupytercad/jupytercad-core/install.json"
"jupytercad_core/labextension" = "share/jupyter/labextensions/@jupytercad/jupytercad-core"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "jupytercad_core/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
dependencies = ["hatch-jupyter-builder>=0.5"]
ensured-targets = [
  "jupytercad_core/labextension/static/style.js",
  "jupytercad_core/labextension/package.json",
]
skip-if-exists = ["jupytercad_core/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
build_dir = "jupytercad_core/labextension"
npm = ["jlpm"]
source_dir = "src"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
  "python -m pip install 'jupyterlab>=4.0.0,<5'",
  "jlpm",
  "jlpm build:prod",
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
